[metadata]
name = pyencrypt-pye
version = 0.1.0
url = https://github.com/ZhaoQi99/pyencrypt-pye
project_urls = 
    Homepage = https://github.com/ZhaoQi99/pyencrypt-pye
    Changelog = https://github.com/ZhaoQi99/pyencrypt-pye/releases
    Source = https://github.com/ZhaoQi99/pyencrypt-pye
    Issue Tracker = https://github.com/ZhaoQi99/pyencrypt-pye/issues
    # Documentation = https://github.com/ZhaoQi99/pyencrypt-pye
author = Qi Zhao
author_email = zhaoqi99@outlook.com
# "Trove classifiers" for PyPI (https://pypi.org/classifiers/).
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Console
license_files = LICENSE
description = Encrypt python source code and import module dynamically.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python-encrypt, import-hook

[options]
install_requires = 
    Cython >= 0.29.24
    pycryptodome >= 3.14.1
    pyminifier >= 2.1
    click
python_requires = >=3.6
packages = find:
# package_dir =
#     = src

[options.packages.find]
# where = src
exclude =
    tests
    *.tests.*

[options.entry_points]
console_scripts =
    pyencrypt = pyencrypt.cli:cli

[yapf]
based_on_style = pep8
COLUMN_LIMIT = 119
indent_width =  4
coalesce_brackets = True
dedent_closing_brackets = True

[flake8]
max_line_length = 119
ignore = E501,W504