[metadata]
name = pyencrypt-pye
version = attr: pyencrypt.__version__
url = https://github.com/ZhaoQi99/pyencrypt-pye
project_urls = 
    Homepage = https://github.com/ZhaoQi99/pyencrypt-pye
    Changelog = https://github.com/ZhaoQi99/pyencrypt-pye/releases
    Source = https://github.com/ZhaoQi99/pyencrypt-pye
    Issue Tracker = https://github.com/ZhaoQi99/pyencrypt-pye/issues
    # Documentation = https://github.com/ZhaoQi99/pyencrypt-pye
author = Qi Zhao
author_email = zhaoqi99@outlook.com
# "Trove classifiers" for PyPI (https://pypi.org/classifiers/).
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Console
license_files = LICENSE
description = Encrypt python source code and import module dynamically.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python-encrypt, import-hook

[options]
install_requires = 
    Cython >= 0.29.30
    pycryptodome >= 3.14.1
    python-minifier >= 2.6.0; python_version < '3.14'
    click
    setuptools >= 66.1.0; python_version >= '3.12'
    setuptools <= 60.9.0; python_version < '3.12'
python_requires = >=3.6,<3.14
packages = find:
# package_dir =
#     = src

[options.extras_require]
dev:
    isort
    black
    pytest
    ipython
    flake8

[options.packages.find]
# where = src
exclude =
    tests
    *.tests.*

[options.entry_points]
console_scripts =
    pyencrypt = pyencrypt.cli:cli

[black]
line-length = 88

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,E701,E501